--- a/index.htm
+++ b/index.htm
@@ -723,8 +723,8 @@
                     </div>
                     <div
                       class="flex flex-col lmd:flex-row mt-4 py-2 px-4 lmd:justify-between lmd:items-center gap-x-2 items-center">
-                      <p class="w-6/12">Dizayn mürəkkəblik:</p>
-                      <div class="relative w-6/12 h-[50px] flex flex-col justify-center gap-4 lmd:mt-0 items-center">
+                      <p class="w-6/12 max-lmd:w-[90%] max-lmd:mb-3">Dizayn mürəkkəblik:</p>
+                      <div class="relative w-6/12 max-lmd:w-[90%] h-[50px] flex flex-col justify-center gap-4 lmd:mt-0 items-center">
                         <span class="absolute top-0 left-0">Sadə</span>
                         <span class="absolute top-0 left-[50%] -translate-x-[50%]">Orta</span>
                         <span class="absolute top-0 right-0">Xüsusi</span>
