--- a/index.htm
+++ b/index.htm
@@ -188,6 +188,7 @@
 
         <div
             class="w-[60px] h-[60px] fixed cursor-pointer bg-[#a271f2] flex justify-center items-center rounded-[50%] bottom-5 right-6 z-[99999999]">
+            <span class="absolute w-[20px] h-[20px] bg-[#bf1212] rounded-[50%] flex justify-center items-center text-[11px] right-0 top-0 text-white">1</span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="#fff" viewBox="0 0 800 800" height="32px" width="32px"
                 role="img" alt="Söhbət ikonu" aria-labelledby="openIconTitle openIconDesc" class="tawk-min-chat-icon">
                 <path fill-rule="evenodd" clip-rule="evenodd"
